Add service to add components

--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -6,11 +6,11 @@
     </div>
   </div>
   <ul class="side-menu-list">
-    <li class="side-menu-item large">Item</li>
-    <li class="side-menu-item">Item</li>
-    <li class="side-menu-item">Item</li>
-    <li class="side-menu-item active">Item</li>
-    <li class="side-menu-item">Item</li>
+    <li class="side-menu-item large">Larger item</li>
+    <li class="side-menu-item">item</li>
+    <li class="side-menu-item">item</li>
+    <li class="side-menu-item active">item</li>
+    <li class="side-menu-item">item</li>
   </ul>
 </div>
 <!-- {{dashboardable-side-menu}} -->
