--- a/tests/dummy/app/styles/app.less
+++ b/tests/dummy/app/styles/app.less
@@ -17,7 +17,7 @@ h1{
   background-color: #212121;
   background-image: url('/assets/images/noise.png');
   width: 225px;
-  border-right: 10px solid rgb(105, 225, 228);
+  border-right: 10px solid rgb(17, 184, 255);
   height: 100%;
   position: absolute;
   .side-menu-header{
@@ -60,9 +60,9 @@ h1{
       }
 
       &.active{
-        border-right: 5px solid #69E1E4;
+        border-right: 5px solid rgb(17, 184, 255);
         &:hover{
-          border-right: 8px solid #69E1E4;
+          border-right: 8px solid rgb(17, 184, 255);
           background-position-x: -3px;
         }
       }
@@ -80,7 +80,7 @@ h1{
         background-color: #171717;
         color: #cfcfcf;
         text-indent: 8px;
-        border-right: 5px solid rgb(105, 225, 228);
+        border-right: 5px solid rgb(17, 184, 255);
       }
     }
   }
@@ -93,7 +93,7 @@ h1{
 .dashboardable-dashboard-container{
   @media (max-width: 560px){
     margin-left: 0px;
-    border-left: 5px solid rgb(105, 225, 228);
+    border-left: 5px solid rgb(17, 184, 255);
     width: 100%;
   };
 
@@ -107,7 +107,7 @@ h1{
 }
 
 .dashboardable-card{
-  // transition: all 0.5s;
+  transition: display 0.5s;
   background-image: url('/assets/images/black-noise.png');
   display: inline-block;
 
@@ -157,5 +157,9 @@ h1{
         content: "\f200";
       }
     }
+  }
+
+  .ember-chartnew{
+    margin: 15px;
   }
 }
