--- a/tests/dummy/app/templates/index.hbs
+++ b/tests/dummy/app/templates/index.hbs
@@ -1,3 +1,4 @@
+<h5>these buttons' purpose is to demonstrate the modularity of the dashboard, they would not exist on the real application</h5>
 <div class="buttons">
   <button type="button" name="button" {{action 'addComponent'}}>Add</button>
   <button type="button" name="button" {{action 'clearDashboard'}}>Clear</button>
@@ -10,44 +11,3 @@
     {{component item.name options=item.options}}
   {{/dashboardable-card}}
 {{/each}}
-
-
-<!--
-
-{{#dashboardable-card}}
-  <h4 class="bar-chart">Lorem Ipsum</h4>
-  {{ember-chartnew type='horizontal-bar' data=barChartData options=chartOptions}}
-{{/dashboardable-card}}
-{{#dashboardable-card}}
-  <h4 class="pie-chart">Lorem Ipsum</h4>
-  {{ember-chartnew type='doughnut' data=doughnutChartData options=chartOptions}}
-{{/dashboardable-card}}
-{{#dashboardable-card}}
-  <h4 class="pie-chart">Lorem Ipsum</h4>
-  {{ember-chartnew type='pie' data=pieChartData options=chartOptions}}
-{{/dashboardable-card}}
-{{#dashboardable-card}}
-  <h4 class="bar-chart">Lorem Ipsum</h4>
-  {{ember-chartnew type='bar' data=barChartData options=chartOptions}}
-{{/dashboardable-card}}
-{{#dashboardable-card}}
-  <h4 class="bar-chart">Lorem Ipsum</h4>
-  {{ember-chartnew type='horizontal-bar' data=barChartData options=chartOptions}}
-{{/dashboardable-card}}
-{{#dashboardable-card}}
-  <h4 class="pie-chart">Lorem Ipsum</h4>
-  {{ember-chartnew type='doughnut' data=doughnutChartData options=chartOptions}}
-{{/dashboardable-card}}
-{{#dashboardable-card}}
-  <h4 class="pie-chart">Lorem Ipsum</h4>
-  {{ember-chartnew type='pie' data=pieChartData options=chartOptions}}
-{{/dashboardable-card}}
-{{#dashboardable-card}}
-  <h4 class="bar-chart">Lorem Ipsum</h4>
-  {{ember-chartnew type='bar' data=barChartData options=chartOptions}}
-{{/dashboardable-card}}
-
-{{#dashboardable-card}}
-  <h4 class="bar-chart">Lorem Ipsum</h4>
-  {{ember-chartnew type='horizontal-bar' data=barChartData options=chartOptions}}
-{{/dashboardable-card}} -->
