--- a/tests/dummy/app/styles/app.less
+++ b/tests/dummy/app/styles/app.less
@@ -142,6 +142,15 @@ h1{
     padding-bottom: 10px;
     border-bottom: 1px solid #F3F3F4;
 
+    i{
+      float: right;
+      margin-right: 10px;
+
+      &:hover{
+        color: rgb(232, 28, 28);
+      }
+    }
+
     &.bar-chart{
       &:before{
         margin-right: 5px;
