--- a/assets/dummy.css
+++ b/assets/dummy.css
@@ -10,7 +10,7 @@ h1 {
   background-color: #212121;
   background-image: url('/assets/images/noise.png');
   width: 225px;
-  border-right: 10px solid #11b8ff;
+  border-right: 10px solid #B9B9B9;
   height: 100%;
   position: absolute;
 }
@@ -59,10 +59,10 @@ h1 {
   background-image: url('/assets/images/noise.png');
 }
 .dashboardable-side-menu .side-menu-list .side-menu-item.active {
-  border-right: 5px solid #11b8ff;
+  border-right: 5px solid #B9B9B9;
 }
 .dashboardable-side-menu .side-menu-list .side-menu-item.active:hover {
-  border-right: 8px solid #11b8ff;
+  border-right: 8px solid #B9B9B9;
   background-position-x: -3px;
 }
 .dashboardable-side-menu .side-menu-list .side-menu-item:before {
@@ -77,7 +77,7 @@ h1 {
   background-color: #171717;
   color: #cfcfcf;
   text-indent: 8px;
-  border-right: 5px solid #11b8ff;
+  border-right: 5px solid #B9B9B9;
 }
 .dashboardable-dashboard-container {
   background-color: #F3F3F4;
@@ -90,34 +90,28 @@ h1 {
 @media (max-width: 560px) {
   .dashboardable-dashboard-container {
     margin-left: 0px;
-    border-left: 5px solid #11b8ff;
+    border-left: 5px solid #B9B9B9;
     width: 100%;
   }
 }
 .dashboardable-card {
   background-image: url('/assets/images/black-noise.png');
   display: inline-block;
-  width: 30%;
-  margin: 1.60%;
+  width: calc((100% - 120px) / 3);
+  margin: 10px 20px;
   background-color: #ffffff;
   border-bottom: 5px solid #D2D2D2;
   box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.14), 0 2px 2px 0 rgba(0, 0, 0, 0.098), 0 1px 5px 0 rgba(0, 0, 0, 0.084);
 }
-@media (max-width: 1279px) {
+@media (max-width: 1229px) {
   .dashboardable-card {
-    width: 45%;
-    margin: 2.5%;
+    width: calc((100% - 80px) / 2);
   }
 }
-@media (max-width: 960px) {
+@media (max-width: 949px) {
   .dashboardable-card {
-    width: 90%;
-    margin: 5%;
+    width: calc(100% - 40px);
   }
-}
-.dashboardable-card:hover {
-  border-bottom: 5px solid #b5b5b5;
-  box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.28), 0 2px 2px 0 rgba(0, 0, 0, 0.13), 0 1px 5px 0 rgba(0, 0, 0, 0.13);
 }
 .dashboardable-card h4 {
   font-size: 18px;
@@ -129,6 +123,13 @@ h1 {
   padding-bottom: 10px;
   border-bottom: 1px solid #F3F3F4;
 }
+.dashboardable-card h4 i {
+  float: right;
+  margin-right: 10px;
+}
+.dashboardable-card h4 i:hover {
+  color: #e81c1c;
+}
 .dashboardable-card h4.bar-chart:before {
   margin-right: 5px;
   font-family: "FontAwesome";
@@ -139,7 +140,90 @@ h1 {
   font-family: "FontAwesome";
   content: "\f200";
 }
+.dashboardable-card.full-width {
+  width: calc(100% - 40px);
+}
+.dashboardable-card .buttons {
+  margin: 8px;
+}
+.dashboardable-card .buttons button {
+  position: relative;
+  margin: 2px;
+  background-color: #949494;
+  color: #ffffff;
+  border: none;
+  font: inherit;
+  cursor: pointer;
+  border-bottom: 5px solid #828282;
+  border-radius: 2px;
+}
+.dashboardable-card .buttons button.btn-add-random {
+  background-color: #008eb4;
+  border-bottom: 5px solid #007b9c;
+}
+.dashboardable-card .buttons button.btn-add-random:before {
+  font-family: "FontAwesome";
+  content: "\f074";
+  margin-right: 3px;
+}
+.dashboardable-card .buttons button.btn-add-random:hover {
+  border-bottom: 4px solid #007b9c;
+}
+.dashboardable-card .buttons button.btn-add {
+  background-color: #0ab400;
+  border-bottom: 5px solid #0b9902;
+}
+.dashboardable-card .buttons button.btn-add:before {
+  font-family: "FontAwesome";
+  content: "\f067";
+  margin-right: 3px;
+}
+.dashboardable-card .buttons button.btn-add:hover {
+  border-bottom: 4px solid #0b9902;
+}
+.dashboardable-card .buttons button.btn-clear {
+  background-color: #fe0404;
+  border-bottom: 5px solid #cc0000;
+}
+.dashboardable-card .buttons button.btn-clear:before {
+  font-family: "FontAwesome";
+  content: "\f05e";
+  margin-right: 3px;
+}
+.dashboardable-card .buttons button.btn-clear:hover {
+  border-bottom: 4px solid #cc0000;
+}
+.dashboardable-card .buttons button:hover {
+  border-bottom: 4px solid #828282;
+  top: 1px;
+}
 .dashboardable-card .ember-chartnew {
   margin: 15px;
+}
+.dropdown-menu {
+  position: absolute;
+  top: 44px;
+  left: 29px;
+  border-radius: 2px;
+  background-color: #F3F3F4;
+  border: none;
+  box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.14), 0 2px 2px 0 rgba(0, 0, 0, 0.098), 0 1px 5px 0 rgba(0, 0, 0, 0.084);
+  padding: 0;
+}
+.dropdown-menu li div {
+  cursor: pointer;
+  padding-left: 5px;
+  margin: 2px;
+  border-radius: 2px;
+  background-color: #dadada;
+  border-bottom: 2px solid #cccccc;
+  transition: all 0.5s;
+}
+.dropdown-menu li div i {
+  margin-right: 5px;
+}
+.dropdown-menu li div:hover {
+  background-color: #B9B9B9;
+  border-bottom: 2px solid #939393;
 }
 /*# sourceMappingURL=/assets/dummy.css.map */
