--- a/tests/dummy/app/styles/app.less
+++ b/tests/dummy/app/styles/app.less
@@ -86,10 +86,6 @@ h1{
   }
 }
 
-.dashboardable-fullscreen-container{
-  // background-color: #c6c6c6;
-}
-
 .dashboardable-dashboard-container{
   @media (max-width: 560px){
     margin-left: 0px;
@@ -98,7 +94,6 @@ h1{
   };
 
   background-color: #F3F3F4;
-  // background-image: url('/assets/images/black-noise.png');
   margin-left: 225px;
   width: calc(~'100% - 225px');
   height: 100%;
@@ -124,6 +119,10 @@ h1{
   border-bottom: 5px solid #D2D2D2;
 
   box-shadow: 0 3px 1px -2px rgba(0,0,0,.14),0 2px 2px 0 rgba(0,0,0,.098),0 1px 5px 0 rgba(0,0,0,.084);
+
+  &.card-default{
+    height: 300px;
+  }
 
   h4{
     font-size: 18px;
@@ -159,6 +158,10 @@ h1{
         content: "\f200";
       }
     }
+  }
+
+  &.double-width{
+    width: calc(~'(100% - 60px) / 3 * 2');
   }
 
   &.full-width{
@@ -227,6 +230,10 @@ h1{
     }
   }
 
+  div{
+    height: 100%;
+  }
+
   .ember-chartnew{
     margin: 15px;
   }
@@ -239,15 +246,10 @@ h1{
   border-radius: 2px;
   background-color: #F3F3F4;
   border: none;
-  // border-bottom: 5px solid #B9B9B9;
   box-shadow: 0 3px 1px -2px rgba(0,0,0,.14),0 2px 2px 0 rgba(0,0,0,.098),0 1px 5px 0 rgba(0,0,0,.084);
   padding: 0;
   li{
     div{
-      i{
-        margin-right: 5px;
-      }
-
       cursor: pointer;
       padding-left: 5px;
       margin: 2px;
@@ -255,10 +257,19 @@ h1{
       background-color: #dadada;
       border-bottom: 2px solid #cccccc;
       transition: all 0.5s;
+      i{
+        margin-right: 5px;
+      }
       &:hover{
         background-color: #B9B9B9;
         border-bottom: 2px solid #939393;
       }
     }
   }
+}
+
+.ember-c3-chart{
+  width: calc(~'100% - 20px');
+  height: calc(~'100% - 70px') !important;
+  margin: 10px;
 }
