--- a/tests/dummy/app/templates/index.hbs
+++ b/tests/dummy/app/templates/index.hbs
@@ -1,4 +1,4 @@
-{{#dashboardable-card classesToAdd='full-width'}}
+{{#dashboardable-card class='full-width'}}
   <div class="buttons">
     <button class="btn-add dropdown-toggle" data-toggle="dropdown" type="button" name="button">Add<span class="caret"></span></button>
     <ul class="dropdown-menu">
@@ -12,7 +12,6 @@
     <button class="btn-clear" type="button" name="button" {{action 'clearDashboard'}}>Clear</button>
   </div>
 {{/dashboardable-card}}
-
 
 {{#each dashboard.components as |item|}}
   {{#dashboardable-card class=item.options.classesToAdd}}
